--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ CLOUDINARY_API_SECRET: aDzekxEaM5q0Xtinqcix-JOfqdE
 CLOUD_NAME: haymos
 MONGO_URI: mongodb+srv://haymosx:Amos33@bobbydazzler.ezqpkei.mongodb.net/imedia
 PORT: 5000
+
+imedia_jwtPrivateKey: mySecureKey
+
