--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.6.0",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.36.1",
     "config": "^3.3.9",
@@ -18,12 +20,16 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^10.6.0",
+    "firebase-admin": "^11.11.0",
     "gridfs-stream": "^1.1.1",
     "joi": "^17.9.1",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^7.0.3",
+    "mongoose": "^7.5.3",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.9.7"
   }
 }
