--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^7.5.3",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "nodemailer-mailgun-transport": "^2.1.5"
   }
 }
